--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,8 +1,12 @@
 .button {
-  color: red;
-  display: block;
-  width: 90%;
-  margin: 10px 5%;
+  color: #ca3737;
+  background-color: #f1f1f1;
+  width: 100%;
+  margin: 5px 0;
   padding: 10px 0;
-  border-radius: 15px;
+  font-family: inherit;
+  font-size: 100%;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
+  text-shadow: 0 2px 0 white;
+  border-radius: 10px;
 }
