--- a/src/Components/Modal/Modal.css
+++ b/src/Components/Modal/Modal.css
@@ -11,6 +11,16 @@
   background-color: white;
   border-radius: 10px;
   text-align: center;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.7);
+}
+
+#modal-underlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0,0,0,0.25);
 }
 
 .modal-header {
