--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,15 @@
 body { /* Font stack (Override me for headers) */
   font-family: 'Arvo', 'Helvetica Neue', 'Arial';
 
-  background: #fafafa;
+  background: rgb(202,55,55);
+  background: linear-gradient(90deg,
+      rgba(247,247,247,1) 0%,
+      rgba(202,55,55,0.06) 100%);
 }
 
 /* Font override: Headings = Bungee, if available */
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Bungee';
-    letter-spacing: 4px;
-    text-shadow: -1px 2px 0 #ca3737;
+  font-family: 'Bungee';
+  letter-spacing: 4px;
+  text-shadow: -1px 2px 0 #ca3737;
 }
