--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,14 +1,14 @@
 .button {
   color: #ca3737;
-  background-color: #f1f1f1;
+  background-color: #f5f5f5;
   width: 100%;
   margin: 0;
   padding: 10px 0;
   font-family: inherit;
   font-size: 100%;
-  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   text-shadow: 0 2px 0 white;
-  border-radius: 10px;
+  border-radius: 4px;
   height: 45px;
-  margin: 5px 0;
+  margin: 7px 0;
 }
