--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -2,6 +2,15 @@
   margin-bottom: 25px;
 }
 
+#header-img {
+  position: absolute;
+  top: -10px;
+  left: 25px;
+  width: 100px;
+  transform: rotate(-20deg);
+  z-index: -1;
+}
+
 .header-title {
   text-align: right;
   padding: 10px;
@@ -15,7 +24,7 @@
 }
 
 .header-input {
-  background-color: #f1f1f1;
+  background-color: #fcfcfc;
   border: none;
   outline: none;
   height: 40px;
