--- a/src/App.css
+++ b/src/App.css
@@ -15,4 +15,6 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Bungee';
   letter-spacing: 4px;
   text-shadow: -1px 2px 0 #F44336;
+  line-height: 100%;
+  display: inline-block;
 }
