Soften the color palette

--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,10 @@ body { /* Font stack (Override me for headers) */
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Bungee';
   letter-spacing: 4px;
-  text-shadow: -1px 2px 0 #F44336;
+  text-shadow: -1px 2px 0 #E57373;
   line-height: 100%;
   display: inline-block;
+  color: #333;
 }
 
 .input-group-line {
