--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,13 +1,14 @@
 .button {
-  color: white;
-  background-color: #B71C1C;
+  box-sizing: border-box;
+  color: #333;
+  background-color: #f8f8f8;
+  border: 2px solid #E57373;
   width: 100%;
   font-family: inherit;
   font-size: 100%;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  text-shadow: 0 1px 0 #444;
-  border-radius: 4px;
-  border: 0;
-  margin: 5px 0;
+  text-shadow: 0 1px 0 #aaa;
+  border-radius: 3px;
+  margin: 3px 0;
   padding: 10px;
 }
