--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
 }
 
-.transition {
+.height-transition {
   transition: height 200ms ease-in;
   height: 0;
   overflow: hidden;
