--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,21 @@
 @import url(//fonts.googleapis.com/css?family=Arvo|Bungee);
 
-* { /* Standardize margins */
+* {
+  /* Standardize margins */
   padding: 0;
   margin: 0;
 }
 
 /* Font override: Headings = Bungee, if available */
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Bungee';
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Bungee";
   letter-spacing: 4px;
-  text-shadow: -1px 2px 0 #E57373;
+  text-shadow: -1px 2px 0 #e57373;
   line-height: 100%;
   display: inline-block;
   color: #333;
@@ -21,8 +27,12 @@ h1, h2, h3, h4, h5, h6 {
   overflow: hidden;
 }
 
-body { /* Font stack (Override me for headers) */
-  font-family: 'Arvo', 'Helvetica Neue', 'Arial';
-  background-image: url('./Components/ComponentAssets/pattern.svg');
+.height-transition-opened {
+  height: 45px;
 }
 
+body {
+  /* Font stack (Override me for headers) */
+  font-family: "Arvo", "Helvetica Neue", "Arial";
+  background-image: url("./Components/ComponentAssets/pattern.svg");
+}
